--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>EcoTracker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EcoTracker - Monitorizează și îmbunătățește amprenta ecologică</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <header>
+        <h1>EcoTracker</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Acasă</a></li>
+                <li><a href="consum.html">Monitorizare Consum</a></li>
+                <li><a href="provocari.html">Provocări și Recompense</a></li>
+                <li><a href="sfaturi.html">Sfaturi Personalizate</a></li>
+                <li><a href="comunitate.html">Comunitate</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Bine ai venit la EcoTracker!</h2>
+            <p>Monitorizează-ți consumul, ia parte la provocări și descoperă cum poți reduce amprenta ecologică.</p>
+            <a href="consum.html" class="btn">Începe acum</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 EcoTracker. Toate drepturile rezervate.</p>
+    </footer>
 </body>
 </html>
