--- a/consum.html
+++ b/consum.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitorizare Consum - EcoTracker</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        function calculeazaAmprenta() {
+            var apaConsum = document.getElementById('apa').value;
+            var electricitateConsum = document.getElementById('electricitate').value;
+            var combustibilConsum = document.getElementById('combustibil').value;
+            var amprenta = (apaConsum * 0.5) + (electricitateConsum * 1.2) + (combustibilConsum * 2);
+            document.getElementById('amprenta-text').innerText = 'Amprenta de carbon asociată: ' + amprenta.toFixed(2) + ' kgCO2e';
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -22,14 +31,15 @@
     <main>
         <section class="consum-form">
             <h2>Introdu datele de consum</h2>
-            <form action="submit_consum.php" method="POST">
-                <label for="apa">Consum de apă (L):</label>
-                <input type="number" id="apa" name="apa" required>
-                <label for="electricitate">Consum de electricitate (kWh):</label>
-                <input type="number" id="electricitate" name="electricitate" required>
-                <label for="combustibil">Consum de combustibil (litri):</label>
-                <input type="number" id="combustibil" name="combustibil" required>
-                <button type="submit" class="btn">Trimite</button>
+            <label for="apa">Consum de apă (L):</label>
+            <input type="number" id="apa" name="apa" required>
+            <label for="electricitate">Consum de electricitate (kWh):</label>
+            <input type="number" id="electricitate" name="electricitate" required>
+            <label for="combustibil">Consum de combustibil (litri):</label>
+            <input type="number" id="combustibil" name="combustibil" required>
+            <button type="button" class="btn" onclick="calculeazaAmprenta()">Calculează</button>
+            <p id="amprenta-text"></p>
+            
             </form>
         </section>
     </main>
